--- a/src/main/webapp/add.xhtml
+++ b/src/main/webapp/add.xhtml
@@ -8,22 +8,22 @@
 		<h:form id="personform">
 			<h:panelGrid columns="2">
 
-				<h:outputText value="Add Person with very simple form" />
+				<h:outputText value="Dodaj osobę - simple form" />
 				<h:commandLink action="addSimple?faces-redirect=true">
 					<h:outputText value=" Add person " />
 				</h:commandLink>
 
-				<h:outputText value="Add Person with some validators" />
+				<h:outputText value="Dodaj osobę - walidacja" />
 				<h:commandLink action="addValidation?faces-redirect=true">
 					<h:outputText value=" Add person " />
 				</h:commandLink>
 
-				<h:outputText value="Add Person with JSF 2.0 ajax support" />
+				<h:outputText value="Dodaj osobę - AJAX" />
 				<h:commandLink action="addAjax?faces-redirect=true">
 					<h:outputText value=" Add person " />
 				</h:commandLink>
 
-				<h:outputText value="Add Person with RichFaces support" />
+				<h:outputText value="Dodaj osobę - RichFaces" />
 				<h:commandLink action="addRF?faces-redirect=true">
 					<h:outputText value=" Add person " />
 				</h:commandLink>
